<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">athleets</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>


    <string name="app_by">nwice.com</string>
    <string name="app_sponsor">burstyourcondom.com</string>    
    
   	<string name="menu_connect">Connect</string>   	
    <string name="menu_login">Login</string>
    <string name="menu_multi">Multi</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_ws">WS</string>
    
    <string name="menu_disconnect">Disconnect</string>
        
    <!-- deck -->
    
    <string name="settings_deck">Deck Type</string>
    <string name="settings_deck_default">red</string>
    <string-array name="settings_deck_types">
        <item>blue</item>
        <item>red</item>
    </string-array>    
    
    <string name="settings_connect">Auto-connect</string>
    <string name="settings_connect_default">true</string>
    <string name="settings_connect_summary">Auto-connect summary</string>    
    
    <string name="settings_sound">Sound</string>
    <string name="settings_sound_default">true</string>
    <string name="settings_sound_summary">Sound Summary</string>
    
    <string name="connect_service">cs</string>
    
    <!-- games below -->
    
    <string name="app_id">577351902338095</string>    
    
</resources>
