<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
        <com.athleets.preference.SummarizedListPreference 
            android:key="settings_tweet"
        />              

		<CheckBoxPreference 		    
		    android:key="settings_connect"
            android:title="@string/settings_connect"
            android:summary="@string/settings_connect_summary"
            android:defaultValue="@string/settings_connect_default"
            />        
        
		<CheckBoxPreference 
		    android:key="settings_sound"
            android:title="@string/settings_sound"
            android:summary="@string/settings_sound_summary"
            android:defaultValue="@string/settings_sound_default"
            />

</PreferenceScreen>